# mycerealfork

./: .gitignore  CMakeLists.txt  blog.cpp  main.cpp  mymain.cpp  todo.txt
myinclude/cereal/archives/: json.hpp
tracers/: amar.py  finalinclude.txt  full.txt  include.txt
